feat: Show a message on unknown errors

--- a/turtlemail/locale/de/LC_MESSAGES/django.po
+++ b/turtlemail/locale/de/LC_MESSAGES/django.po
@@ -378,6 +378,14 @@ msgstr "Löschen"
 msgid "Add stay"
 msgstr "Aufenthalt hinzufügen"
 
+msgid "Oops, that didn't work."
+msgstr "Huch, das hat nicht geklappt."
+
+msgid "Please try again later, or contact the support team if that doesn't work."
+msgstr ""
+"Bitte versuche es später noch einmal, oder melde dich beim Support-Team, "
+"fals das auch nicht funktioniert."
+
 msgid "Place a delivery"
 msgstr "Eine Lieferung erstellen"
 
