--- a/turtlemail/locale/de/LC_MESSAGES/django.po
+++ b/turtlemail/locale/de/LC_MESSAGES/django.po
@@ -390,6 +390,13 @@ msgid "Place a delivery"
 msgstr "Eine Lieferung erstellen"
 
 #, python-format
+msgid "%(user)s accepted your invitation!"
+msgstr "%(user)s hat deine Einladung angenommen!"
+
+msgid "Send them something"
+msgstr "Ein Paket schicken"
+
+#, python-format
 msgid "Receive from %(sender)s"
 msgstr "Empfangen von %(sender)s"
 
