fix: Add missing translations

--- a/turtlemail/locale/de/LC_MESSAGES/django.po
+++ b/turtlemail/locale/de/LC_MESSAGES/django.po
@@ -393,6 +393,10 @@ msgstr "Du wurdest zu turtlemail eingeladen!"
 msgid "Invite sent!"
 msgstr "Einladung gesendet!"
 
+#, fuzzy, python-format
+msgid "%(action)s"
+msgstr "In der Nähe von %(location)s"
+
 msgid "Dismiss"
 msgstr "Ablehnen"
 
@@ -406,8 +410,23 @@ msgstr "Bearbeiten"
 msgid "Delete"
 msgstr "Löschen"
 
+#, fuzzy
+msgid "Save"
+msgstr "Aktiv"
+
 msgid "Add stay"
 msgstr "Aufenthalt hinzufügen"
+
+msgid ""
+"This stay is planned for some of your deliveries. Making changes will "
+"cancel these plans."
+msgstr ""
+"Dieser Auftenthalt ist für Lieferungen eingeplant. Wenn du ihn änderst, "
+"wird deine Mithilfe bei diesen Lieferungen abgesagt."
+
+#, fuzzy
+msgid "Cancel"
+msgstr "Stornieren"
 
 msgid "Oops, that didn't work."
 msgstr "Huch, das hat nicht geklappt."
@@ -419,6 +438,24 @@ msgstr ""
 
 msgid "Place a delivery"
 msgstr "Eine Lieferung erstellen"
+
+msgid "Type to search by username..."
+msgstr "Tippen, um nach Nutzernamen zu suchen..."
+
+#, fuzzy
+msgid "You can't send a delivery to yourself."
+msgstr "sendet diese Lieferung an dich."
+
+msgid ""
+"There's no turtlemail user with this username yet. But you can still send"
+" your delivery - just invite them!"
+msgstr ""
+"Es gibt noch keinen Account mit diesem Nutzernamen. Du kannst trotzdem "
+"dein Paket versenden - versende einfach eine Einladung!"
+
+#, fuzzy, python-format
+msgid "Invite %(name)s to turtlemail"
+msgstr "Du wurdest zu turtlemail eingeladen!"
 
 #, python-format
 msgid "Receive from %(sender)s"
@@ -598,6 +635,63 @@ msgstr "Gefördert vom Bundesministerium für Bildung und Forschung"
 msgid "Source Code"
 msgstr "Quellcode"
 
+msgid "Thanks! Would this date and location work instead?"
+msgstr "Danke! Würden dieses Datum und dieser Ort stattdessen passen?"
+
+#, fuzzy
+msgid "Delivery Request: "
+msgstr "Anfrage: "
+
+#, fuzzy, python-format
+msgid "Take from %(person)s"
+msgstr "Empfangen von %(sender)s"
+
+#, fuzzy, python-format
+msgid "Hand over to %(person)s"
+msgstr "Übergeben an %(name)s"
+
+msgid "Can you hand over your packet at the above dates?"
+msgstr "Kannst du dein Paket an diesen Tagen übergeben?"
+
+#, python-format
+msgid ""
+"%(sender)s would like to send a packet to you. Can you take it from "
+"%(user)s at the above dates?"
+msgstr ""
+"%(sender)s würde dir gerne ein Paket schicken. Kannst du es von %(user)s "
+"an den obenstehenden Daten annehmen?"
+
+msgid "Can you help make this delivery at the above dates?"
+msgstr "Kannst du an den obenstehenden Daten helfen, dieses Paket zu überliefern?"
+
+msgid "Yes"
+msgstr "Ja"
+
+msgid "Not in the foreseeable future"
+msgstr "Nicht in der absehbaren Zukunft"
+
+msgid "I don't know right now, ask me again later"
+msgstr "Ich weiß gerade nicht, frag mich später noch einmal"
+
+msgid "No, but I'll be at this location another time:"
+msgstr "Nein, aber ich werde zu anderer Zeit an diesem Ort sein, und zwar:"
+
+msgid "We'll create a new stay for these dates."
+msgstr "Wir werden einen neuen Aufenthalt für diese Daten anlegen."
+
+msgid "Send"
+msgstr "Versenden"
+
+#, fuzzy
+msgid "Delivery Handover: "
+msgstr "Lieferung Log Eintrag"
+
+msgid "Did you receive this package?"
+msgstr "Hast du dieses Paket erhalten?"
+
+msgid "No, there has been a problem"
+msgstr "Nein, es gab ein Problem"
+
 msgid "Hello!"
 msgstr "Hallo!"
 
@@ -644,9 +738,6 @@ msgstr "Bereit zum Versand"
 msgid "Receive"
 msgstr "Empfangen"
 
-msgid "Send"
-msgstr "Versenden"
-
 msgid "Signal Messenger"
 msgstr ""
 
@@ -657,12 +748,25 @@ msgstr ""
 msgid "Add location"
 msgstr "Ort hinzufügen"
 
+msgid "Click on the map to select a location."
+msgstr "Klicke auf die Karte, um einen Ort auszuwählen."
+
 #, fuzzy
 msgid "Your locations"
 msgstr "Deine Orte"
 
 msgid "You don't have any locations yet."
 msgstr "Du hast bis jetzt noch keine Orte angelegt."
+
+msgid "Click on the map to select a new location."
+msgstr "Klick auf die Karte, um einen neuen Ort auszuwählen."
+
+msgid ""
+"This location is planned for some of your deliveries. Making changes will"
+" cancel these plans."
+msgstr ""
+"Dieser Ort ist für Lieferungen eingeplant. Wenn du ihn änderst, wird "
+"deine Mithilfe bei diesen Lieferungen abgesagt."
 
 #~ msgid "Hello %(name)s!"
 #~ msgstr "Hallo %(name)s!"
