fix: missing translations

--- a/turtlemail/locale/de/LC_MESSAGES/django.po
+++ b/turtlemail/locale/de/LC_MESSAGES/django.po
@@ -386,11 +386,16 @@ msgid ""
 "details of a delivery handover.\n"
 "                        Be excellent and careful with personal data.<br "
 "/>\n"
-"                        Handover is planned on {date} and location "
-"{location}.<br />\n"
+"                        Handover is planned on {date} near {location}.<br"
+" />\n"
 "                        Happy turtlemailing!\n"
 "                                 "
 msgstr ""
+"\n"
+"Hallo,<br />\n"
+"hier kannst du ein Datum und einen Ort für eine Paketübergabe ausmachen. "
+"Sei nett und teile keine persönlichen Daten. Die Übergabe ist am {date} "
+"in der Nähe von {location} geplant. Viel Spaß!"
 
 msgid "Identifier of predefined system messages"
 msgstr ""
@@ -471,7 +476,7 @@ msgstr ""
 "fals das auch nicht funktioniert."
 
 msgid "Click a chat from the list to agree upon package exchanges."
-msgstr ""
+msgstr "Wähle ein Gespräch aus, um Nachrichten zu schreiben."
 
 msgid "You're currently not involved in any deliveries."
 msgstr "Du bist zur Zeit an keinen Lieferungen beteiligt."
