fix: Only show packet chat link when there is a chat

--- a/turtlemail/locale/de/LC_MESSAGES/django.po
+++ b/turtlemail/locale/de/LC_MESSAGES/django.po
@@ -394,8 +394,9 @@ msgstr ""
 "\n"
 "Hallo,<br />\n"
 "hier kannst du ein Datum und einen Ort für eine Paketübergabe ausmachen. "
-"Sei nett und teile keine persönlichen Daten. Die Übergabe ist am {date} "
-"in der Nähe von {location} geplant. Viel Spaß!"
+"Bitte teile keine persönlichen Daten und nimm Rücksicht auf dein "
+"Gegenüber. Die Übergabe ist am {date} in der Nähe von {location} geplant."
+" Viel Spaß!"
 
 msgid "Identifier of predefined system messages"
 msgstr ""
