feat: Show hint when no route was found

--- a/turtlemail/locale/de/LC_MESSAGES/django.po
+++ b/turtlemail/locale/de/LC_MESSAGES/django.po
@@ -208,12 +208,15 @@ msgstr "Zugestellt"
 msgid "The system is currently looking for people who can make this delivery."
 msgstr "Das System sucht aktuell nach Menschen, die diese Lieferung machen können."
 
+#, fuzzy
 msgid ""
-"The system found no way to reach the recipient. If you want to retry "
-"sending this delivery, please create a new one."
+"The system found no way to reach the recipient. Try adding more stays to "
+"your profile!"
 msgstr ""
-"Das System hat keinen Weg gefunden den Empfänger zu erreichen. Wenn du es"
-" noch einmal versuchen möchtest, lege bitte eine neue Lieferung an."
+"Das System hat keinen Weg gefunden den Empfänger zu erreichen. Du kannst "
+"mehr Aufenthalte in deinem Profil hinzufügen, um mehr "
+"Übergabemöglichkeiten zu erschaffen. Das System sucht im Hintergrund "
+"weiter nach Wegen."
 
 msgid "Waiting for everyone involved to confirm the planned journeys."
 msgstr ""
