#83: insert link to package in chat window

--- a/turtlemail/locale/de/LC_MESSAGES/django.po
+++ b/turtlemail/locale/de/LC_MESSAGES/django.po
@@ -490,6 +490,9 @@ msgstr "Mehr anzeigen"
 msgid "Delivery created"
 msgstr "Lieferung erstellt"
 
+msgid "Click here to view package details. 📦"
+msgstr ""
+
 #, fuzzy
 msgid "Message"
 msgstr "Nachricht"
