--- a/turtlemail/locale/de/LC_MESSAGES/django.po
+++ b/turtlemail/locale/de/LC_MESSAGES/django.po
@@ -412,10 +412,9 @@ msgid ""
 msgstr ""
 "\n"
 "Hallo,<br />\n"
-"hier kannst du ein Datum und einen Ort für eine Paketübergabe ausmachen. "
-"Bitte teile keine persönlichen Daten und nimm Rücksicht auf dein "
-"Gegenüber. Die Übergabe ist am {date} in der Nähe von {location} geplant."
-" Viel Spaß!"
+"hier kannst du ein Datum und einen Ort für eine Übergabe ausmachen. Bitte"
+" teile keine persönlichen Daten und nimm Rücksicht auf dein Gegenüber. "
+"Die Übergabe ist am {date} in der Nähe von {location} geplant. Viel Spaß!"
 
 msgid "Identifier of predefined system messages"
 msgstr "Identifizierung von voreingestellten Systemnachrichten"
@@ -473,6 +472,13 @@ msgstr "Du wurdest zu turtlemail eingeladen!"
 msgid "Invite sent!"
 msgstr "Einladung gesendet!"
 
+msgid "Your username is your public alias in the app."
+msgstr ""
+"Dein Benutzername ist als dein Alias gedacht und wird überall in der App "
+"verwendet. Wähle also einen Namen, mit dem du dich wohl fühlst. Er wird "
+"für alle sichtbar sein und andere müssen ihn kennen, um dir etwas "
+"schicken zu können."
+
 #, fuzzy, python-format
 msgid "%(action)s"
 msgstr "In der Nähe von %(location)s"
@@ -510,7 +516,7 @@ msgid "You're currently not involved in any deliveries."
 msgstr "Du bist zur Zeit an keinen Lieferungen beteiligt."
 
 msgid "Place a delivery"
-msgstr "Eine Lieferung erstellen"
+msgstr "Ein Pet verschicken"
 
 msgid "Type to search by username..."
 msgstr "Tippen, um nach Nutzernamen zu suchen..."
@@ -524,7 +530,7 @@ msgid ""
 " your delivery - just invite them!"
 msgstr ""
 "Es gibt noch keinen Account mit diesem Nutzernamen. Du kannst trotzdem "
-"dein Paket versenden - versende einfach eine Einladung!"
+"dein Pet versenden - versende einfach eine Einladung!"
 
 #, fuzzy, python-format
 msgid "Invite %(name)s to turtlemail"
@@ -735,18 +741,18 @@ msgid "Hand over to %(person)s"
 msgstr "Übergeben an %(name)s"
 
 msgid "Can you hand over your packet at the above dates?"
-msgstr "Kannst du dein Paket an diesen Tagen übergeben?"
+msgstr "Kannst du dein Pet an diesen Tagen übergeben?"
 
 #, python-format
 msgid ""
 "%(sender)s would like to send a packet to you. Can you take it from "
 "%(user)s at the above dates?"
 msgstr ""
-"%(sender)s würde dir gerne ein Paket schicken. Kannst du es von %(user)s "
-"an den obenstehenden Daten annehmen?"
+"%(sender)s würde dir gerne ein Pet schicken. Kannst du es von %(user)s an"
+" den obenstehenden Daten annehmen?"
 
 msgid "Can you help make this delivery at the above dates?"
-msgstr "Kannst du an den obenstehenden Daten helfen, dieses Paket zu überliefern?"
+msgstr "Kannst du an den obenstehenden Daten helfen, dieses Pet zu überliefern?"
 
 msgid "Yes"
 msgstr "Ja"
@@ -775,7 +781,7 @@ msgid "Delivery Handover: "
 msgstr "Lieferung Log Eintrag"
 
 msgid "Did you receive this package?"
-msgstr "Hast du dieses Paket erhalten?"
+msgstr "Hast du dieses Pet erhalten?"
 
 msgid "No, there has been a problem"
 msgstr "Nein, es gab ein Problem"
@@ -831,7 +837,6 @@ msgstr "Signal"
 msgid "Telegram"
 msgstr "Telegram"
 
-#, fuzzy
 msgid "Add location"
 msgstr "Ort hinzufügen"
 
@@ -844,9 +849,16 @@ msgstr "Bearbeiten"
 msgid "Delete"
 msgstr "Löschen"
 
-#, fuzzy
 msgid "Your locations"
 msgstr "Deine Orte"
+
+msgid "Add locations you frequently visit."
+msgstr ""
+"Wähle hier einen oder mehrere Standorte aus, wo du öfter hingehst/dich "
+"aufhältst. Diese gelten als Basis, von wo aus du Pets versendest, "
+"empfängst oder an andere übergibst. (Noch gibt es keine Such-Funktion, du"
+" musst die Standorte manuell auf der Karte suchen und anklicken.) Du "
+"kannst jedem Standort einen individuellen Namen geben."
 
 msgid "Click on the map to select a new location."
 msgstr "Klick auf die Karte, um einen neuen Ort auszuwählen."
@@ -868,6 +880,11 @@ msgstr "Aufenthalt hinzufügen"
 #, python-format
 msgid "Will not be included in any deliveries until %(date)s"
 msgstr "Nicht in jeglichen Lieferungen inkludiert bis %(date)s"
+
+msgid "Specify how often or when you visit your locations."
+msgstr ""
+"Hier kannst du angeben, wie oft du dich an deinen Standorten befindest, "
+"z.B. täglich, wöchentlich oder nur ab und zu."
 
 msgid "Add a location above, then create stays here!"
 msgstr ""
